// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapMarginInlineStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 0;
  -moz-scroll-snap-margin-inline-start: 0;
  -ms-scroll-snap-margin-inline-start: 0;
  scroll-snap-margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 0;
  -moz-scroll-snap-margin-inline-start: 0;
  -ms-scroll-snap-margin-inline-start: 0;
  scroll-snap-margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 0;
  -moz-scroll-snap-margin-inline-start: 0;
  -ms-scroll-snap-margin-inline-start: 0;
  scroll-snap-margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 0;
  -moz-scroll-snap-margin-inline-start: 0;
  -ms-scroll-snap-margin-inline-start: 0;
  scroll-snap-margin-inline-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: hasnot;
  -moz-scroll-snap-margin-inline-start: hasnot;
  -ms-scroll-snap-margin-inline-start: hasnot;
  scroll-snap-margin-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: has;
  -moz-scroll-snap-margin-inline-start: has;
  -ms-scroll-snap-margin-inline-start: has;
  scroll-snap-margin-inline-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: hasnot;
  -moz-scroll-snap-margin-inline-start: hasnot;
  -ms-scroll-snap-margin-inline-start: hasnot;
  scroll-snap-margin-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: has;
  -moz-scroll-snap-margin-inline-start: has;
  -ms-scroll-snap-margin-inline-start: has;
  scroll-snap-margin-inline-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: invalid.path.1;
  -moz-scroll-snap-margin-inline-start: invalid.path.1;
  -ms-scroll-snap-margin-inline-start: invalid.path.1;
  scroll-snap-margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: invalid.path.1;
  -moz-scroll-snap-margin-inline-start: invalid.path.1;
  -ms-scroll-snap-margin-inline-start: invalid.path.1;
  scroll-snap-margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: invalid.path.1;
  -moz-scroll-snap-margin-inline-start: invalid.path.1;
  -ms-scroll-snap-margin-inline-start: invalid.path.1;
  scroll-snap-margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: invalid.path.1;
  -moz-scroll-snap-margin-inline-start: invalid.path.1;
  -ms-scroll-snap-margin-inline-start: invalid.path.1;
  scroll-snap-margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: -54881;
  -moz-scroll-snap-margin-inline-start: -54881;
  -ms-scroll-snap-margin-inline-start: -54881;
  scroll-snap-margin-inline-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: -54881;
  -moz-scroll-snap-margin-inline-start: -54881;
  -ms-scroll-snap-margin-inline-start: -54881;
  scroll-snap-margin-inline-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: -42365;
  -moz-scroll-snap-margin-inline-start: -42365;
  -ms-scroll-snap-margin-inline-start: -42365;
  scroll-snap-margin-inline-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: -42365;
  -moz-scroll-snap-margin-inline-start: -42365;
  -ms-scroll-snap-margin-inline-start: -42365;
  scroll-snap-margin-inline-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: July;
    -moz-scroll-snap-margin-inline-start: July;
    -ms-scroll-snap-margin-inline-start: July;
    scroll-snap-margin-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: September;
    -moz-scroll-snap-margin-inline-start: September;
    -ms-scroll-snap-margin-inline-start: September;
    scroll-snap-margin-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: July;
    -moz-scroll-snap-margin-inline-start: July;
    -ms-scroll-snap-margin-inline-start: July;
    scroll-snap-margin-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: September;
    -moz-scroll-snap-margin-inline-start: September;
    -ms-scroll-snap-margin-inline-start: September;
    scroll-snap-margin-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: May;
    -moz-scroll-snap-margin-inline-start: May;
    -ms-scroll-snap-margin-inline-start: May;
    scroll-snap-margin-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: June;
    -moz-scroll-snap-margin-inline-start: June;
    -ms-scroll-snap-margin-inline-start: June;
    scroll-snap-margin-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: April;
    -moz-scroll-snap-margin-inline-start: April;
    -ms-scroll-snap-margin-inline-start: April;
    scroll-snap-margin-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: May;
    -moz-scroll-snap-margin-inline-start: May;
    -ms-scroll-snap-margin-inline-start: May;
    scroll-snap-margin-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: June;
    -moz-scroll-snap-margin-inline-start: June;
    -ms-scroll-snap-margin-inline-start: June;
    scroll-snap-margin-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: April;
    -moz-scroll-snap-margin-inline-start: April;
    -ms-scroll-snap-margin-inline-start: April;
    scroll-snap-margin-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: July;
    -moz-scroll-snap-margin-inline-start: July;
    -ms-scroll-snap-margin-inline-start: July;
    scroll-snap-margin-inline-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: September;
    -moz-scroll-snap-margin-inline-start: September;
    -ms-scroll-snap-margin-inline-start: September;
    scroll-snap-margin-inline-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: July;
    -moz-scroll-snap-margin-inline-start: July;
    -ms-scroll-snap-margin-inline-start: July;
    scroll-snap-margin-inline-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: September;
    -moz-scroll-snap-margin-inline-start: September;
    -ms-scroll-snap-margin-inline-start: September;
    scroll-snap-margin-inline-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: November;
    -moz-scroll-snap-margin-inline-start: November;
    -ms-scroll-snap-margin-inline-start: November;
    scroll-snap-margin-inline-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: August;
    -moz-scroll-snap-margin-inline-start: August;
    -ms-scroll-snap-margin-inline-start: August;
    scroll-snap-margin-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: January;
    -moz-scroll-snap-margin-inline-start: January;
    -ms-scroll-snap-margin-inline-start: January;
    scroll-snap-margin-inline-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: December;
    -moz-scroll-snap-margin-inline-start: December;
    -ms-scroll-snap-margin-inline-start: December;
    scroll-snap-margin-inline-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: April;
    -moz-scroll-snap-margin-inline-start: April;
    -ms-scroll-snap-margin-inline-start: April;
    scroll-snap-margin-inline-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: May;
    -moz-scroll-snap-margin-inline-start: May;
    -ms-scroll-snap-margin-inline-start: May;
    scroll-snap-margin-inline-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: June;
    -moz-scroll-snap-margin-inline-start: June;
    -ms-scroll-snap-margin-inline-start: June;
    scroll-snap-margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: January;
    -moz-scroll-snap-margin-inline-start: January;
    -ms-scroll-snap-margin-inline-start: January;
    scroll-snap-margin-inline-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: December;
    -moz-scroll-snap-margin-inline-start: December;
    -ms-scroll-snap-margin-inline-start: December;
    scroll-snap-margin-inline-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: April;
    -moz-scroll-snap-margin-inline-start: April;
    -ms-scroll-snap-margin-inline-start: April;
    scroll-snap-margin-inline-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: May;
    -moz-scroll-snap-margin-inline-start: May;
    -ms-scroll-snap-margin-inline-start: May;
    scroll-snap-margin-inline-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-start: June;
    -moz-scroll-snap-margin-inline-start: June;
    -ms-scroll-snap-margin-inline-start: June;
    scroll-snap-margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 54881;
  -moz-scroll-snap-margin-inline-start: 54881;
  -ms-scroll-snap-margin-inline-start: 54881;
  scroll-snap-margin-inline-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 54881;
  -moz-scroll-snap-margin-inline-start: 54881;
  -ms-scroll-snap-margin-inline-start: 54881;
  scroll-snap-margin-inline-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 42365;
  -moz-scroll-snap-margin-inline-start: 42365;
  -ms-scroll-snap-margin-inline-start: 42365;
  scroll-snap-margin-inline-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: 42365;
  -moz-scroll-snap-margin-inline-start: 42365;
  -ms-scroll-snap-margin-inline-start: 42365;
  scroll-snap-margin-inline-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: July;
  -moz-scroll-snap-margin-inline-start: July;
  -ms-scroll-snap-margin-inline-start: July;
  scroll-snap-margin-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: July;
  -moz-scroll-snap-margin-inline-start: July;
  -ms-scroll-snap-margin-inline-start: July;
  scroll-snap-margin-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: June;
  -moz-scroll-snap-margin-inline-start: June;
  -ms-scroll-snap-margin-inline-start: June;
  scroll-snap-margin-inline-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: June;
  -moz-scroll-snap-margin-inline-start: June;
  -ms-scroll-snap-margin-inline-start: June;
  scroll-snap-margin-inline-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-start: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-start: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-start: DarkSlateBlue;
  scroll-snap-margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-start: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-start: DarkSlateBlue;
  scroll-snap-margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-start: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-start: DarkSlateBlue;
  scroll-snap-margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-start: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-start: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-start: DarkSlateBlue;
  scroll-snap-margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
